# graph-robotics

./: .gitignore  .gitmodules  README.md  atomic_tasks.yaml  composite_tasks.yaml  hierarchical_graph.py  task_decomposition_ui.py  task_visualization.py
HOV-SG/hovsg/graph/: graph.py
HOV-SG/hovsg/utils/: clip_utils.py  graph_utils.py
concept-graphs/: latest_pcd_save  robosuite_code_smnair.py
concept-graphs/conceptgraph/: scannet200_classes_colors.json
concept-graphs/conceptgraph/ai2thor/: rearrange.py
concept-graphs/conceptgraph/dataset/: datasets_common.py
concept-graphs/conceptgraph/hydra_configs/: base_paths.yaml  hm3d.yaml  hm3d_mapping.yaml
graph-pad/: .gitignore  install.sh  main_embodied_memory.py  main_geometry.py  main_openeqa.py  main_rooms.py  requirements.txt  run_script.sh  subset_scene_ids.txt  test_masterslam.py  test_masterslam_detailed.py  test_masterslam_direct.py  trash.py
graph-pad/embodied_memory/: __init__.py  detection.py  detection_feature_extractor.py  edges.py  embodied_memory.py  geometry.py  relationship_scorer.py  rooms.py  scene_graph.py  visualizer.py
graph-pad/eqa/: api.py  evaluate-predictions.py  prompt_formatting.py  reasoning_loop.py
graph-pcl/: CMakeLists.txt  README.md  build.sh  setup.py  test_bindings.py
graph-pcl/include/: SceneGraphManager.h  SceneNode.h
graph-pcl/src/: SceneGraphManager.cpp  SceneNode.cpp  bindings.cpp
graph-pcl/tests/: test_SceneNode.cpp
gso/: .gitignore  ask_question.py  environment.yml  eval_script.sh  main_embodied_memory.py  main_geometry.py  main_openeqa.py  main_rooms.py  main_semantictree.py  main_semantictree1.py  read_graphs.py  run_script.sh  scene_ids.txt
gso/open-eqa/: .gitignore
gso/open_eqa/: api.py  environment.yml  evaluate-predictions.py  reasoning_loop.py  utils.py
gso/scene-graph/: geometry.py  object.py  pointcloud.py  relationship_scorer.py  scenegraph.py  visualizer.py
gso/scene_graph/: __init__.py  detection.py  edges.py  embodied_memory.py  environment.yml  features.py  floor.py  object.py  pixi.toml  pointcloud.py  relationship_scorer.py  rooms.py  scene_graph.py  semantic_tree.py  track.py  unit_test.py  visualizer.py
llm-planner/: saycan.py  task_decomposition.py  tree_tasks.py  tree_tasks_ui.py
open-eqa/: evaluate-predictions.py
open-eqa/results/: open-eqa-v0-gemini-1.5-flash-latest.json
open-eqa/sg-reasoner/: main.py
robosuite/: droc.txt  evla.ipynb  evla.txt  gemini_video.py  manipulation.py  mlx.txt  openvla.txt  panda_lift.py  panda_lift_render.py  reflect.txt  robosuite.txt  sam2.txt  test_manipulation.py  test_manipulation_apis.py
sankey/: SceneGraphSankey.tsx  mock_graph.json
sankey/d3-sankey/: package-lock.json  package.json
sankey/scene-graph-sankey/: App.tsx  package-lock.json  package.json
sankey/src/: App.tsx  index.tsx  types.ts
scene-graph/: .gitignore  debug_perception.txt  images.py  main_geometry.py  main_semantictree.py  node.py  pixi.toml  pointcloud.py  relationship_scorer.py  scenegraph.py  similarity.py  track.py  unit_test.py  visualizer.py
scene-graph-visualizer/: package-lock.json  package.json
scene-graph-visualizer/src/: App.tsx  types.ts
scene-graph/datasets/: common.py  datasets.py
scene-graph/perception/: __init__.py  perception.py
scene-graph/utils/: __init__.py  images.py  llm.py  logging.py  system.py
(+322 files in other folders)
